Update ComplexFunctionCallTransformer.java
Update per SonarQube check

Signed-off-by: Craig <117254390+click9000@users.noreply.github.com>