@@ -118,11 +118,10 @@ public class ComplexFunctionCallTransformer {
         } else if (functionName.equalsIgnoreCase("parse_datetime") && args.length == 2
                    && args[1] instanceof StringLiteral) {
             // parse_datetime -> str_to_jodatime
-            StringLiteral format = (StringLiteral) args[1];
-            String formatString = format.getStringValue();
+            String formatString = ((StringLiteral) args[1]).getStringValue();
             // "yyyy-MM-dd'T'HH:mm:ss.SSS'Z'" -> "yyyy-MM-ddTHH:mm:ss.SSS"
             formatString = formatString.replace("'T'", "T").replace("'Z'", "");
-            return new FunctionCallExpr("str_to_jodatime", ImmutableList.of(args[0], new StringLiteral(formatString)));
+            return new FunctionCallExpr("str_to_jodatime", java.util.List.of(args[0], new StringLiteral(formatString)));
         }
         return null;
     }
